# gap_detect_v2_project

./: CODEBASE_GUIDE_FOR_AI.md  Dockerfile  Dockerfile (Copy)  PROJECT_OVERVIEW.md  Project.md  README.md  SLAM_NAVIGATION_GUIDE.md  Untitled 1.odt  build_collaboration.sh  build_log.txt
.cursor/rules/: gapdetectprojectrules.mdc
Study/: README.md  central_coordinator_tutorial.md  doosan_helper_tutorial.md  launch_file_tutorial.md  study_guide.md
docs/: CAMERA_ROBOT_INTEGRATION_SPEC.md  ENVIRONMENT_SETUP.md  INTEGRATION_GUIDE.md  README.md  codebase_summary.md  study_guide.md  work_instructions.md
docs/QR/: QR_NODE_IMPLEMENTATION_GUIDE.md  qr_pose_correction_server.py
docs/SLAM/: SLAM_NAVIGATION_GUIDE.md  navigation_setup.py
docs/mobile_robot/: INDEX.md  README.md  SUMMARY.md
docs/mobile_robot/api/: mobile_robot_control_node.md
docs/mobile_robot/architecture/: design_overview.md
docs/mobile_robot/examples/: basic_examples.md
docs/mobile_robot/guides/: getting_started.md
src/: CMakeLists.txt
src/beginner_tutorials/: CMakeLists.txt  package.xml
src/central_coordinator/: CMakeLists.txt  README.md  package.xml
src/central_coordinator/launch/: integrated_system.launch
src/central_coordinator/src/: coordinator_node.py
src/doosan_helper/: CMakeLists.txt  README.md  README_COLLABORATION.md  package.xml
src/doosan_helper/launch/: integrated_system.launch  mobile_cobot_collaboration.launch
src/doosan_helper/src/: cobot_coordinator_node.cpp  ldj_doosan_action_server.cpp  move_robot_node.cpp  move_robot_node_v2.cpp  move_robot_reverse_node.cpp  trigger_home_node.cpp  trigger_one_node.cpp  trigger_zero_node.cpp
src/doosan_robot_control/: CMakeLists.txt  QUICK_START.md  README.md  package.xml
src/doosan_robot_control/config/: robot_config.yaml
src/doosan_robot_control/include/doosan_robot_control/: doosan_robot_controller.h
src/doosan_robot_control/launch/: doosan_robot_control.launch  doosan_robot_with_dsr.launch
src/doosan_robot_control/src/: doosan_robot_control_node.cpp  doosan_robot_controller.cpp
src/ldj_mobile_robot_map/: CMakeLists.txt  README.md  package.xml
src/ldj_mobile_robot_map/config/: robot_params.yaml
src/ldj_mobile_robot_map/docs/: WORK_ORDER.md  mobile_robot_control_methods.md
src/ldj_mobile_robot_map/launch/: load_map.launch
src/ldj_mobile_robot_map/scripts/: ldj_load_map.py  woosh_ros_bridge.py
src/mobile_lidar_control/: CMakeLists.txt  README.md  package.xml
src/mobile_lidar_control/config/: params.yaml
src/mobile_lidar_control/docs/: WORK_ORDER.md
src/mobile_lidar_control/include/mobile_lidar_control/: .gitkeep
src/mobile_lidar_control/msg/: .gitkeep
src/mobile_lidar_control/scripts/: .gitkeep  lidar_corrected_mover.py  lidar_motion_corrector.py  lidar_subscriber.py  test_lidar_motion_corrector.py  test_lidar_subscriber.py  twist_motion_controller.py
src/mobile_lidar_control/src/mobile_lidar_control/: .gitkeep
src/mobile_lidar_control/srv/: MoveDistance.srv
src/mobile_robot_control/: CMakeLists.txt  README.md  package.xml
src/mobile_robot_control/src/: battery_check.py  ldj_mobile_robot_action_server.py  mobile_robot_control_node.py  mobile_robot_twist_control.py  move_mobile_robot_node.py  test_connect_node.py  test_smooth_motion.sh
src/mobile_robot_server/: CMakeLists.txt  package.xml
src/mobile_robot_server/script/: mobile_posiotion_server.py
src/mobile_robot_server/scripts/: LIDAR_SENSOR_UNIT_TEST_GUIDE.md  ldj_mobile_posiotion_server_twist.py  mobile_posiotion_server.py  mobile_posiotion_server_twist.py  mobile_posiotion_server_twist_with_navigation.py  test_lidar_sensor.py
src/mobile_robot_server/srv/: MobilePosition.srv  MobilePositionTwist.srv
src/robot_coordinator/: CMakeLists.txt  package.xml
src/robot_coordinator/launch/: coordinate_robots.launch
src/robot_coordinator/src/: ldj_coordinator_node.cpp
src/robot_interfaces/: CMakeLists.txt  package.xml
src/robot_interfaces/action/: MoveArmSequence.action  MoveMobile.action
src/testbed_operation/: CMakeLists.txt  package.xml
src/testbed_operation/scripts/: aruco_pose.py  battery_check.py  init__.py  ldj_load_map.py  qr_pose_correction_server_test.py  testbed_operation_client.py  testbed_operation_client_all.py  testbed_operation_client_all_with_camera.py  testbed_operation_client_all_with_camera_with_navigation.py  zivid_capture.py
src/testbed_operation/scripts/qr_vision/: aruco_pose.py  init.py  zivid_capture.py
src/testbed_operation/srv/: QRPoseCorrection.srv
src/woosh_robot_py/examples/: demo_lite_ko.py  monitor_ko.py  test2.py  tr200_move_to_goal.py
