<?xml version="1.0"?>
<package format="2">
  <name>doosan_robot_control</name>
  <version>1.0.0</version>
  <description>
    Doosan Robot Control Node - 두산로봇 제어 스켈레톤 코드
    
    확장 가능한 두산로봇 제어 프레임워크.
    기본 연결, 상태 모니터링, ROS 통합 제공.
  </description>
  
  <maintainer email="robotics@katech.re.kr">KATECH Robotics Team</maintainer>
  <license>MIT</license>
  
  <author email="robotics@katech.re.kr">KATECH Robotics Team</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Core ROS Dependencies -->
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>trajectory_msgs</depend>
  
  <!-- Doosan Robot Dependencies -->
  <depend>dsr_msgs</depend>
  <depend>dsr_control</depend>
  
  <!-- MoveIt (Optional, for advanced motion planning) -->
  <depend>moveit_core</depend>
  <depend>moveit_ros_planning_interface</depend>
  
  <!-- System Dependencies -->
  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>

