<?xml version="1.0"?>
<package format="2">
  <name>ldj_mobile_robot_map</name>
  <version>1.0.0</version>
  <description>
    woosh 모바일 로봇(TR-200) 맵 기반 제어 패키지
    - 방안 1: Twist 명령을 통한 직접 속도 제어
    - 방안 2: ROS Navigation Stack 연동
  </description>

  <maintainer email="djlee2@katech.re.kr">LDJ</maintainer>
  <license>MIT</license>

  <author email="djlee2@katech.re.kr">LDJ</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- ROS 기본 의존성 -->
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>tf2_ros</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>tf2_ros</exec_depend>

  <!-- Navigation Stack 의존성 (방안 2용) -->
  <exec_depend>move_base</exec_depend>
  <exec_depend>amcl</exec_depend>
  <exec_depend>map_server</exec_depend>
  <exec_depend>dwa_local_planner</exec_depend>
  <exec_depend>global_planner</exec_depend>

  <!-- 시각화 -->
  <exec_depend>rviz</exec_depend>

  <export>
  </export>
</package>

