<?xml version="1.0"?>
<package format="2">
  <name>mobile_lidar_control</name>
  <version>0.1.0</version>
  <description>
    Mobile robot control package with LiDAR-based motion correction.
    Features include:
    - LiDAR data acquisition and processing
    - Twist command-based precise position correction
    - Rviz integration and visualization
  </description>

  <maintainer email="user@katech.re.kr">KATECH Robotics Team</maintainer>
  <license>Apache-2.0</license>

  <author email="user@katech.re.kr">User</author>

  <!-- Build Dependencies -->
  <buildtool_depend>catkin</buildtool_depend>

  <!-- Runtime Dependencies -->
  <build_depend>rospy</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>message_generation</build_depend>

  <exec_depend>rospy</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>std_msgs</exec_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>sensor_msgs</exec_depend>
  <exec_depend>nav_msgs</exec_depend>
  <exec_depend>visualization_msgs</exec_depend>
  <exec_depend>message_runtime</exec_depend>

  <!-- Export -->
  <export>
  </export>
</package>

