<?xml version="1.0"?>
<package format="2">
  <name>mobile_robot_control</name>
  <version>0.1.0</version>
  <description>Mobile robot control package for ROS integration</description>

  <maintainer email="katech@example.com">KATECH</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>rospy</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>

  <export>
  </export>
</package>

